force-app/main/default/objects/HistoricoVacinacao__c/HistoricoVacinacao__c.object-meta.xml
<CustomObject>
    <label>Histórico de Vacinação</label>
    <nameField>
        <displayFormat>HistVac - {0000}</displayFormat>
        <label>Historico de Vacinação Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Históricos de Vacinações</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>