force-app/main/default/objects/HistoricoVacinacao__c/fields/DataHoraVacinacao__c.field-meta.xml
<CustomField>
    <fullName>DataHoraVacinacao__c</fullName>
    <label>Data e Hora da Vacinação</label>
    <type>DateTime</type>
</CustomField>