force-app/main/default/objects/HistoricoVacinacao__c/fields/DataVacinacao__c.field-meta.xml
<CustomField>
    <fullName>DataVacinacao__c</fullName>
    <label>Data da Vacinação</label>
    <type>Date</type>
</CustomField>